security_groups.tf
resource "aws_security_group" "allow_all_home" {
  name        = "allow_all"
  description = "Allow allinbound traffic"
  vpc_id      = aws_vpc.openstack_lab_vpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = [var.home_ip]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_all_traffic"
  }
}


resource "aws_security_group" "neutron_external_sg" {
  vpc_id = aws_vpc.openstack_lab_vpc.id

  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "NeutronExternalSG"
  }
}
